modules/dashboard/styles/ext.cx.dashboard.less
@import "../../widgets/common/ext.cx.common";
@import "mediawiki.mixins";

body {
	background-color: #f0f0f0;
}

.cx-cta {
	.mw-ui-item;
	.mw-ui-one-whole;

	padding: 20px 0;
	float: left;
	font-size: 16px;
	background-color: #f0f0f0;
	z-index: 100;

	&__new-translation:before {
		content: "";
		display: inline-block;
		vertical-align: baseline;
		height: 16px;
		width: 16px;
		margin-right: 5px;
		.background-image-svg('../images/plus_white.svg', '../images/plus_white.png');
		background-size: 16px 16px;
		background-repeat: no-repeat;
	}
}

.cx-dashboard {
	padding: 20px 50px;
	color: @gray-darker;
}

.cx-dashboard__sidebar {
	.mw-ui-one-third;
	float: right;
	position: relative;

	&.sticky {
		margin-right: 15px;
		position: fixed;
		top: 0;
		right: 0;
		.cx-sidebar {
			min-height: 100vh;
		}
	}
}

.cx-sidebar {
	background-color: #fff;
	padding: 20px;
	min-height: 85vh;
	width: 100%;
	margin-right: 50px;
	ul {
		margin: 0;
		padding: 0;
		border-top: 1px solid #ddd;

		li {
			border-bottom: 1px solid #ddd;
			padding: 10px 0;
			list-style: none;
		}
	}

	&__link,
	&__link:visited {
		color: #2460cf;
		font-size: 14px;
		padding: 30px 40px;
		background-position: center left;
		background-repeat: no-repeat;
		background-size: 20px;
	}

	&__title {
		font-size: 20px;
		padding-bottom: 15px;
	}

	.cx-sidebar__link--information {
		.background-image-svg('../images/cx-information.svg', '../images/cx-information.png');
	}

	.cx-sidebar__link--stats {
		.background-image-svg('../images/cx-stats.svg', '../images/cx-stats.png');
	}

	.cx-sidebar__link--feedback {
		.background-image-svg('../images/cx-discuss.svg', '../images/cx-discuss.png');
	}
	.cx-sidebar__link--magnus {
		.background-image-svg('../images/cx-find-missing.svg', '../images/cx-find-missing.png');
	}
}

.cx-header--dashboard {
	background: white;
	border-bottom: 1px solid #ddd;

	.cx-header__title {
		overflow: hidden;
		float: none;
	}

	// Do not display the header bar containing the link to dashboard in dashboard page.
	.cx-header__bar {
		display: none;
	}
}

.cx-translationlist-container {
	.mw-ui-item;
	.mw-ui-two-thirds;

	padding: 0 10px 0 0;
	background-color: #f0f0f0;
}

.cx-translationlist-container.sticky .translation-filter {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 1000;
	width: 66%;
	padding-left: 50px;
}

.translation-source-language-filter,
.translation-target-language-filter {
	background-color: #fff;
	font-size: 1em;
	padding-right: 23px;

	option {
		font-size: 1em;
	}
}

.translation-filter {
	.mw-ui-one-whole;

	background-color: #f0f0f0;
	padding: 0px;
	margin-bottom: 20px;

	.cx-filters {
		.mw-ui-one-half;
		float: left;
		border-radius: 2px;
		overflow: hidden;
		padding: 0;

		:last-child {
			border-right: 1px solid #656565;
		}

		.cx-filter {
			overflow: hidden;
			float: left;
			border-top: 1px solid #656565;
			border-bottom: 1px solid #656565;
			border-left: 1px solid #656565;
			cursor: pointer;
			padding: 10px;
			background-color: white;
			color: #333;

			&--selected {
				background-color: #656565;
				color: #fff;
			}
		}
	}

	.translation-language-filter {
		.mw-ui-one-half;
		float: right;
		border: 1px solid #9D9D9D;
		border-radius: 2px;
		background: #fff;
		padding: 0;

		.translation-language-source-container,
		.translation-language-target-container {
			height: 37px;
			position: relative;
			width: 45%;
			select {
				// The border is necessary to adjust height
				border: 1px solid transparent;
				-webkit-appearance: none;
				-moz-appearance: none;
				appearance: none;
				width: 100%;
				height: 37px;
				position: absolute;
				cursor: pointer;
			}

			.translation-language-select-arrow {
				position: relative;
				float: right;
				width: 0;
				top: 50%;
				margin-right: 23px;

				&:after,
				&:before {
					border: 7px solid transparent;
					content: " ";
					height: 0;
					width: 0;
					position: absolute;
					pointer-events: none;
				}

				&:after {
					border-top-color: #fff;
					top: -6px
				}

				&:before {
					border-top-color: #888888;
					top: -2px;
				}
			}
		}

		.translation-language-source-container {
			float: left;
		}

		.translation-language-target-container {
			float: right;
		}

		.translation-language-arrow {
			position: relative;
			float: left;
			width: 0;
			height: 37px;
			margin-right: 16px;
		}

		.translation-language-arrow:after,
		.translation-language-arrow:before {
			left: 100%;
			top: 50%;
			border: solid transparent;
			content: " ";
			height: 0;
			width: 0;
			position: absolute;
			pointer-events: none;
		}

		.translation-language-arrow:after {
			border-color: rgba(255, 255, 255, 0);
			border-left-color: #fff;
			border-width: 18px;
			border-left-width: 12px;
			margin-top: -18px;
		}

		.translation-language-arrow:before {
			border-color: rgba(157,157,157, 0);
			border-left-color: #9D9D9D;
			border-width: 19px;
			border-left-width: 13px;
			margin-top: -19px;
		}
	}
}

